@@ -8,6 +8,7 @@ tp: counter_test
 tp: errno_test
 tp: file_test
 tp: hash_test
+tp: heap_test
 tp: ht_test
 tp: inet_ntop_test
 tp: lex_test
